[package]
name = "ivory_bus"
version = "0.1.2"
edition = "2021"
description = "Bus library for project Ivory"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
log = { version="0.4.17", features= ["std"] }
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
